- start in supporting BMP - make sure a passed BMP file can be opened, and the info can be read correctly based on the file specs

--- a/Imagedrop/Imagedrop.vcxproj
+++ b/Imagedrop/Imagedrop.vcxproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bits.h" />
+    <ClInclude Include="BMPFormat.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="TGAFormat.h" />
