- add a base class for the image formats - inhirit the TGA and BMP formats from the new ImageFormatBase - override the read, write & (kinda) resize functions - clean up and organize the logic more

--- a/Imagedrop/Imagedrop.vcxproj
+++ b/Imagedrop/Imagedrop.vcxproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <ClInclude Include="Bits.h" />
     <ClInclude Include="BMPFormat.h" />
+    <ClInclude Include="ImageFormatBase.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="TGAFormat.h" />
