--- a/Imagedrop/Imagedrop.vcxproj.filters
+++ b/Imagedrop/Imagedrop.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClInclude Include="BMPFormat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ImageFormatBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
