- create a constants header - define the pixel formats for the bmp file format - add isGrayscale() and isCompressed() methods to the bmp header - add a new setting for logging image pixel data USE_LOG_IMAGE_DATA, and use it in the read() method of the TGA and BMP - edit the SizeInBytes() to work with the instances without the need to pass a ptr to it, and make it virtuals as well - in the main body read the file if it is BMP - edit the layout, naming, comments of the TGA header to be consistent with the new one i came up with for the BMP (more readable)

--- a/Imagedrop/Imagedrop.vcxproj.filters
+++ b/Imagedrop/Imagedrop.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClInclude Include="ImageFormatBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Consts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
